# geometry

./: .gitignore  CMakeLists.txt  README.md  linux_mac_build.sh  shader_generate.py  win_build.bat
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
json/: CMakeLists.txt
shader/: camera.fs.m4  camera.vs.m4  light.fs.m4  light.vs.m4  mesh.fs.m4  mesh.vs.m4  mesh_vertex.m4  screen.fs.m4  screen.vs.m4
shader/include/: camera.m4  camera_func.m4  light.m4  light_func.m4  material.m4  shader_version.m4  uniform.m4
src/: CMakeLists.txt  arcball.cpp  arcball.h  bbox.cpp  bbox.h  camera.cpp  camera.h  canvas.cpp  canvas.h  color.cpp  color.h  global_def.h  global_enum.h  light.cpp  light.h  log.cpp  log.h  main.cpp  material.cpp  material.h  math_def.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  opengl_helper.cpp  opengl_helper.h  quaternion.cpp  quaternion.h  render.cpp  render.h  setting.cpp  setting.h  shader.cpp  shader.h  shader_code_manage.cpp  shader_code_manage.h  tools.cpp  tools.h  triangle.cpp  (+7 more)
